fix home page not covering whole screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
   height: -webkit-fill-available;
 
   height: 100vh;
+  width: 100%;
   
 }
 
